2004-12-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libm/fplib/fp_split.S: Clear r1 (__zero_reg__) upon NaN.
	Fix for (serious) savannah bug #7667.

2004-12-14  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdlib.h: Cosmetical doc change (for atof()).

2004-11-24  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.

	* configure.in:
	* include/avr/io.h:
	Add support for mega165, mega325, mega3250, mega645 and mega6450.

2004-11-18  Eric B. Weddington  <ericw@evcohs.com>

	* include/avr/iotn26.h: Replace file.
	This file is replaced to conform to the license since the original
	author could not be contacted. The new file matches the latest
	data sheet from Atmel.
	* AUTHORS: Updated.

2004-11-18  Eric B. Weddington  <ericw@evcohs.com>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.

	* include/avr/iom16.h: Replace file.
	This file is replaced to conform to the license since the original
	author could not be contacted. The new file matches the latest
	data sheet from Atmel.
	* AUTHORS: Updated.

2004-11-12  Theodore A. Roth  <troth@openavr.org>

	* doc/LICENSE-Changes/PERM-Bob-Paddock:
	* doc/LICENSE-Changes/PERM-Colin-OFlynn:
	* doc/LICENSE-Changes/PERM-Joerg-Wunsch:
	* doc/LICENSE-Changes/PERM-Juergen-Schilling:
	* doc/LICENSE-Changes/PERM-Keith-Gudger:
	* doc/LICENSE-Changes/PERM-Marek-Michalkiewicz:
	* doc/LICENSE-Changes/PERM-Micheal-Stumpf:
	* doc/LICENSE-Changes/PERM-Nils-Kristian-Strom:
	* doc/LICENSE-Changes/PERM-Peter-Jansen:
	* doc/LICENSE-Changes/PERM-Reinhard-Jessich:
	* doc/LICENSE-Changes/PERM-Steinar-Haugen:
	* doc/LICENSE-Changes/PERM-Theodore-A-Roth:
	New files. These are for documenting the granting of permission for
	copyright and licensing changes from various contributors. The files
	are the email messages we received from each individual.

2004-11-10  Eric B. Weddington  <ericw@evcohs.com>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.

2004-11-10  Eric B. Weddington  <ericw@evcohs.com>
